--- a/debian/config/amd64/vyatta/config
+++ b/debian/config/amd64/vyatta/config
@@ -588,7 +588,7 @@ CONFIG_PCI_IOV=y
 CONFIG_PCI_PRI=y
 CONFIG_PCI_PASID=y
 CONFIG_PCI_LABEL=y
-# CONFIG_PCI_HYPERV is not set
+CONFIG_PCI_HYPERV=y
 CONFIG_HOTPLUG_PCI=y
 CONFIG_HOTPLUG_PCI_ACPI=y
 # CONFIG_HOTPLUG_PCI_ACPI_IBM is not set
@@ -1415,7 +1415,7 @@ CONFIG_VSOCKETS=m
 CONFIG_VSOCKETS_DIAG=m
 CONFIG_VMWARE_VMCI_VSOCKETS=m
 # CONFIG_VIRTIO_VSOCKETS is not set
-# CONFIG_HYPERV_VSOCKETS is not set
+CONFIG_HYPERV_VSOCKETS=m
 CONFIG_NETLINK_DIAG=m
 CONFIG_MPLS=y
 # CONFIG_NET_MPLS_GSO is not set
