--- a/debian/templates/control.headers.meta.in
+++ b/debian/templates/control.headers.meta.in
@@ -1,6 +1,6 @@
-Package: linux-headers@source_suffix@@localversion@
-Build-Profiles: <!stage1 !pkg.linux.nokernel !pkg.linux.nometa>
-Depends: linux-headers-@abiname@@localversion@ (= ${binary:Version}), ${misc:Depends}
-Description: Header files for Linux @flavour@ configuration (meta-package)
+Package: linux-headers-@arch@
+Build-Profiles: <!stage1>
+Depends: linux-headers-@abiname@@localversion_headers@-@arch@ (= ${binary:Version}), ${misc:Depends}
+Description: Header files for Linux @arch@ configuration (meta-package)
  This package depends on the architecture-specific header files for the latest
- Linux kernel @flavour@ configuration.
+ Linux kernel @arch@ configuration.
