--- a/debian/templates/control.source.in
+++ b/debian/templates/control.source.in
@@ -1,10 +1,13 @@
 Section: kernel
 Priority: optional
-Maintainer: Debian Kernel Team <debian-kernel@lists.debian.org>
-Uploaders: Bastian Blank <waldi@debian.org>, maximilian attems <maks@debian.org>, Ben Hutchings <ben@decadent.org.uk>, Salvatore Bonaccorso <carnil@debian.org>
+Maintainer: Vyatta Package Maintainers <DL-vyatta-help@att.com>
 Standards-Version: 4.2.0
 Build-Depends:
  debhelper (>= 10.1~), dh-exec,
+# used to sign the EFI binary on OBS
+ dh-signobs <!stage1>,
+# used by bvnos-linux-libc-dev
+ config-package-dev (>= 5) <!stage1>,
 # used to run debian/bin/*.py
  python3:any,
 # used by debian/rules.real to prepare the source
@@ -35,6 +38,4 @@ Build-Depends-Arch:
 # used by upstream headers_install target and by debian/rules.d/tools/usb/usbip
  rsync,
 Rules-Requires-Root: no
-Vcs-Git: https://salsa.debian.org/kernel-team/linux.git
-Vcs-Browser: https://salsa.debian.org/kernel-team/linux
-Homepage: https://www.kernel.org/
+XS-Obs: needssslcertforbuild
